== 1.1.1 released 2008-09-19

* Fixed type in "next page" button.
* Updated valid options for searching and performing calculations, fixed some bugs when searching and performing calculations with advanced options.

== 1.1.0 released 2008-09-18

* Added the options :inner_spread and :outer_spread to the page_links helper. Also added various config options for setting page_links defaults.
* Updated calculation methods to ignore :limit and :offset. AR returns 0 or nil on calculations that provide an offset.
* Added support to allow for "any" of the conditions, instead of all of them. Joins conditions with "or" instead of "and". See Searchgasm::Conditions::Base or the readme

== 1.0.4 released 2008-09-18

* Fixed bugs when performing calculations and searches on has_many through relationships.
* Instead of merging the find_options myself, I delegated that to AR's with_scope function, which already does this. Much more solid, less intrusive.

== 1.0.3 released 2008-09-18

* Updated inspect to show the current options for your search. Plays nicer in the console.
* Made sure protection state is persistent among relationship conditions.
* Fixed bug with backwards compatibility of rails. concat requires a proc in older version.
* Defaulted remote control types to use GET requests instead of POST.
* Completely reengineered integration with ActiveRecord. Searchgasm is properly using scopes letting you do use serachgasm where scope are implemented. @current_users.orders.new_search, etc. If your search is scoped and you want a search object, that search object will represent a new search in the context of those scopes, meaning the scopes get merged into Searchgasm as options.